--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Let's Learn to Knit!">
+  <meta name="author" content="Colleen Fettig">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>Let's Learn to Knit!</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
