--- a/404.html
+++ b/404.html
@@ -5,10 +5,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Modern Business - Start Bootstrap Template</title>
+  <meta name="description" content="Let's Learn to Knit!">
+  <meta name="author" content="Colleen Fettig">
+  <link rel="shortcut icon" href="gold-typography-k-24-298922.png"=image/x-icon"> <title>Let's Learn to Knit!</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,8 +22,10 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="index.html">Let's Learn to Knit!</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -33,46 +34,14 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="Tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Blog
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
-            </div>
-          </li>
-          <li class="nav-item active dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item active" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
-          </li>
-        </ul>
+
+
+
       </div>
     </div>
   </nav>
@@ -82,7 +51,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">404
-      <small>Page Not Found</small>
+      <small>Ruh Roh Page Not Found</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -103,62 +72,20 @@
           <a href="about.html">About</a>
         </li>
         <li>
-          <a href="services.html">Services</a>
+          <a href="Tutorials.html">Tutorials</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
         </li>
-        <li>
-          Portfolio
-          <ul>
-            <li>
-              <a href="portfolio-1-col.html">1 Column Portfolio</a>
-            </li>
-            <li>
-              <a href="portfolio-2-col.html">2 Column Portfolio</a>
-            </li>
-            <li>
-              <a href="portfolio-3-col.html">3 Column Portfolio</a>
-            </li>
-            <li>
-              <a href="portfolio-4-col.html">4 Column Portfolio</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Blog
-          <ul>
-            <li>
-              <a href="blog-home-1.html">Blog Home 1</a>
-            </li>
-            <li>
-              <a href="blog-home-2.html">Blog Home 2</a>
-            </li>
-            <li>
-              <a href="blog-post.html">Blog Post</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Other Pages
-          <ul>
-            <li>
-              <a href="full-width-page.html">Full Width Page</a>
-            </li>
-            <li>
-              <a href="sidebar.html">Sidebar Page</a>
-            </li>
-            <li>
-              <a href="faq.html">FAQ</a>
-            </li>
-            <li>
-              <a href="404.html">404 Page</a>
-            </li>
-            <li>
-              <a href="pricing-table.html">Pricing Table</a>
-            </li>
-          </ul>
-        </li>
+
+
+      </ul>
+
+
+
+      </li>
+      </ul>
+      </li>
       </ul>
     </div>
     <!-- /.jumbotron -->
