--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -83,8 +83,8 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="images/team members/person 1.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h4 class="card-title">Carrie</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Head Instructor</h6>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
           </div>
           <div class="card-footer">
@@ -96,8 +96,8 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="images/team members/person 2.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h4 class="card-title">Mary</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Instructor</h6>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
           </div>
           <div class="card-footer">
@@ -109,8 +109,8 @@
         <div class="card h-100 text-center">
           <img class="card-img-top" src="images/team members/person 3.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h4 class="card-title">Sherry</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Beginning Instructor</h6>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
           </div>
           <div class="card-footer">
@@ -122,7 +122,7 @@
     <!-- /.row -->
 
     <!-- Our Customers -->
-    <h2>Our Customers</h2>
+    <h2>Other Contributors</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="http://placehold.it/500x300" alt="">
@@ -150,11 +150,17 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+    
+      <div class="container">
+   
+   <div class="footer-flex">
+        <p class="footer-flex text-white">Copyright &copy; Let's Learn to Knit! 2019</p>
+        <p class="footer-flex text-white">Colleen Fettig</p>
+      </div>
+      </div> 
+    
+    </footer>
+  
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
