--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,12 @@
   <meta name="author" content="Colleen Fettig">
 
   <title>Let's Learn to Knit!</title>
-  <link rel="shortcut icon" href="gold-typography-k-24-298922.png"=image/x-icon">
-  <!-- Bootstrap core CSS -->
+  <link rel="shortcut icon" href="gold-typography-k-24-298922.png"=image/x-icon"> <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -67,9 +66,8 @@
       <!-- Map Column -->
       <div class="col-lg-8 mb-4">
         <!-- Embedded Google Map -->
-        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-        
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5379.6875690587385!2d-122.3465703242745!3d47.60972714988899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab2c151d6cb%3A0x60441d5f633e9f1c!2sPike%20Place%20Market%2C%20Seattle%2C%20WA!5e0!3m2!1sen!2sus!4v1573787500127!5m2!1sen!2sus"></iframe>
+        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5379.6875690587385!2d-122.3465703242745!3d47.60972714988899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab2c151d6cb%3A0x60441d5f633e9f1c!2sPike%20Place%20Market%2C%20Seattle%2C%20WA!5e0!3m2!1sen!2sus!4v1573787500127!5m2!1sen!2sus"></iframe>
       </div>
       <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
@@ -145,11 +143,13 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <div class="footer-flex" <p class="footer-flex text-white">Copyright &copy; Let's Learn to Knit! 2019</p>
+        <div class="footer-flex">
+        <p class="footer-flex text-white">Copyright &copy; Let's Learn to Knit! 2019</p>
         <p class="footer-flex text-white">Colleen Fettig</p>
       </div>
-      <!-- /.container -->
-  </footer>
+      </div> 
+    
+    </footer>   
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
