more stuff to add

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
   <link href="css/style.css" rel="stylesheet">
 
 
-  <!-- Custom styles for this template -->>
+  
   
 
 </head>
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
 
 
@@ -47,11 +47,11 @@
       </div>
     </div>
   </nav>
-<!--end nav-->
-  <!-- Page Content -->
+
+<!--end navigation-->
   <div class="container">
 
-    <!-- Page Heading/Breadcrumbs -->
+  
     <h1 class="mt-4 mb-3">404
       <small>Ruh Roh Page Not Found</small>
     </h1>
@@ -90,12 +90,9 @@
       </li>
       </ul>
     </div>
-    <!-- /.jumbotron -->
-
+    
   </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
+  
   
       <footer class="py-5 bg-dark">
     
