--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,12 @@
           <abbr title="Email">E</abbr>:
           <a href="mailto:knit@example.com">knit@example.com
           </a>
+
+          <p> 
+            <abbr title="Hours">H</abbr>:
+             Monday - Friday: 9:00 AM to 5:00 PM
+      
+          </p>
         </p>
         <p>
 
