--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <!-- (1)Navigation -->
+  <!-- Navigation -->
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -56,7 +56,7 @@
 
       <!-- Wrapper for slides -->
 
-      <!-- TODO: (2)Add images to your repository and update this code so the carousel has proper slides. -->
+      
 
       <div class="carousel-inner" role="listbox">
         
@@ -94,16 +94,7 @@
 
   <!-- Page Content -->
   <div class="container">
-    <h1 class="my-4">Welcome to Let's Learn to Knit!</h1>
-
-
-    <!-- /.row -->
-
-
-    <!-- Portfolio Section -->
-    <!-- (3)TODO: Add the proper "row" and "col" classes to make this display work the way it should. -->
-    <!-- This section shoudld be contained in a row. -->
-    <!-- This section should have columns that are 4 units wide at size "md" and above, but 6 units wide at size "sm" and below. -->
+    <h1 class="my-4">Welcome to Let's Learn to Knit!</h1>    
 
     <h2>Fun Projects to Learn</h2>
 
@@ -111,7 +102,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 1.jpg" alt="">
+            <img class="card-img-top" src="images/projects/knit project 1.jpg" alt="picture of knit toy mobile">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -127,7 +118,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 2.jpg" alt="">
+            <img class="card-img-top" src="images/projects/knit project 2.jpg" alt="picture of baby booties">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -141,7 +132,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 3.jpg" alt="">
+            <img class="card-img-top" src="images/projects/knit project 3.jpg" alt="picture of ball of yarn">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -157,7 +148,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 4.jpg" alt="">
+            <img class="card-img-top" src="images/projects/knit project 4.jpg" alt="picture of stitches close up">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -173,7 +164,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 5.jpg" alt="">
+            <img class="card-img-top" src="images/projects/knit project 5.jpg" alt="picture of balls of yarn">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -189,7 +180,7 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 6.jpg" alt="">
+            <img class="card-img-top" src="images/projects/knit project 6.jpg" alt="picture of knit dolls">
           </a>
           <div class="card-body">
             <h4 class="card-title">
