--- a/Tutorials.html
+++ b/Tutorials.html
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
 
           </li>
@@ -52,15 +52,15 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Blog Home One
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">Easy Tutorials
+      <small>from our staff</small>
     </h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
         <a href="index.html">Home</a>
       </li>
-      <li class="breadcrumb-item active">Blog Home 1</li>
+      <li class="breadcrumb-item active">Tutorials</li>
     </ol>
 
     <div class="row">
@@ -70,49 +70,49 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="images/tutorials/tutorial 1.jpg" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
+            <h2 class="card-title">Knit scarf with leaves</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
               nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
               possimus, veniam magni quis!</p>
             <a href="#" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            Posted on January 1, 2017 by
-            <a href="#">Start Bootstrap</a>
+            Posted on January 1, 2019 by
+            <a href="#">Mary</a>
           </div>
         </div>
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="images/tutorials/tutorial 2.jpg" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
+            <h2 class="card-title">Fun with yarn</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
               nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
               possimus, veniam magni quis!</p>
             <a href="#" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            Posted on January 1, 2017 by
-            <a href="#">Start Bootstrap</a>
+            Posted on February 1, 2019 by
+            <a href="#">Mary</a>
           </div>
         </div>
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+          <img class="card-img-top" src="images/tutorials/tutorial 3.jpg" alt="Card image cap">
           <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
+            <h2 class="card-title">Baby sweater</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
               nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus
               possimus, veniam magni quis!</p>
             <a href="#" class="btn btn-primary">Read More &rarr;</a>
           </div>
           <div class="card-footer text-muted">
-            Posted on January 1, 2017 by
-            <a href="#">Start Bootstrap</a>
+            Posted on Feb 15, 2019 by
+            <a href="#">Sherry</a>
           </div>
         </div>
 
@@ -152,26 +152,26 @@
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">Web Design</a>
+                    <a href="#">Knit</a>
                   </li>
                   <li>
-                    <a href="#">HTML</a>
+                    <a href="#">Purl</a>
                   </li>
                   <li>
-                    <a href="#">Freebies</a>
+                    <a href="#">Knit left-handed</a>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
                   <li>
-                    <a href="#">JavaScript</a>
+                    <a href="#">Types of Needles</a>
                   </li>
                   <li>
-                    <a href="#">CSS</a>
+                    <a href="#">Where to buy</a>
                   </li>
                   <li>
-                    <a href="#">Tutorials</a>
+                    <a href="#">Inspiration</a>
                   </li>
                 </ul>
               </div>
