--- a/about.html
+++ b/about.html
@@ -10,10 +10,8 @@
   <meta name="author" content="Colleen Fettig">
 
   <title>Let's Learn to Knit!</title>
-  <link rel="shortcut icon" href="gold-typography-k-24-298922.png"=image/x-icon"> <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
+  <link rel="shortcut icon" href="gold-typography-k-24-298922.png"=image/x-icon"> <link
+    href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/modern-business.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -80,9 +78,7 @@
           perspiciatis quis?</p>
       </div>
     </div>
-    <!-- /.row -->
 
-    <!-- Team Members -->
     <h2>Our Team</h2>
 
     <div class="row">
@@ -169,7 +165,7 @@
       </div>
     </div>
 
-  </footer> 
+  </footer>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
