resized some pics

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
-      <small>Subheading</small>
+    <h1 class="mt-4 mb-3">About Us
+      
     </h1>
 
     <ol class="breadcrumb">
@@ -63,7 +63,7 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="images/team members/person 5.jpg" alt="">
+        <img class="img-fluid rounded mb-4" src="images/team members/person 5.jpg" alt="picture of man">
       </div>
       <div class="col-lg-6">
         <h2>About Let's Learn to Knit!</h2>
@@ -79,12 +79,12 @@
       </div>
     </div>
 
-    <h2>Our Team</h2>
+    <h2>Our Instructors<h2>
 
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/team members/person 1.jpg" alt="">
+          <img class="card-img-top" src="images/team members/person 1.jpg" alt="picure of woman">
           <div class="card-body">
             <h4 class="card-title">Carrie</h4>
             <h6 class="card-subtitle mb-2 text-muted">Head Instructor</h6>
@@ -98,7 +98,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/team members/person 2.jpg" alt="">
+          <img class="card-img-top" src="images/team members/person 2.jpg" alt="picture of woman">
           <div class="card-body">
             <h4 class="card-title">Mary</h4>
             <h6 class="card-subtitle mb-2 text-muted">Instructor</h6>
@@ -112,7 +112,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/team members/person 3.jpg" alt="">
+          <img class="card-img-top" src="images/team members/person 3.jpg" alt="picture of woman">
           <div class="card-body">
             <h4 class="card-title">Sherry</h4>
             <h6 class="card-subtitle mb-2 text-muted">Beginning Instructor</h6>
