--- a/Tutorials.html
+++ b/Tutorials.html
@@ -70,7 +70,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="images/tutorials/tutorial 1.jpg" alt="Card image cap">
+          <img class="card-img-top" src="images/tutorials/tutorial 1.jpg" alt="cclose up picture of scarf with leaves">
           <div class="card-body">
             <h2 class="card-title">Knit scarf with leaves</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
@@ -86,7 +86,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="images/tutorials/tutorial 2.jpg" alt="Card image cap">
+          <img class="card-img-top" src="images/tutorials/tutorial 2.jpg" alt="picture of balls of yarn">
           <div class="card-body">
             <h2 class="card-title">Fun with yarn</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
@@ -102,7 +102,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="images/tutorials/tutorial 3.jpg" alt="Card image cap">
+          <img class="card-img-top" src="images/tutorials/tutorial 3.jpg" alt="Closeup view of baby sweater">
           <div class="card-body">
             <h2 class="card-title">Baby sweater</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
