--- a/about.html
+++ b/about.html
@@ -38,8 +38,6 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
-
-          </li>
         </ul>
       </div>
     </div>
@@ -49,9 +47,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About Us
-      
-    </h1>
+    <h1 class="mt-4 mb-3">About Us</h1>
 
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
@@ -131,22 +127,22 @@
     <h2>Other Contributors</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/Contributor 1.jpg" alt="">
+        <img class="img-fluid" src="images/Contributors/Contributor 1.jpg" alt="picture of cat in a basket">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 2.jpg" alt="">
+        <img class="img-fluid" src="images/Contributors/contributor 2.jpg" alt="picture of kitten">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 3.jpg" alt="">
+        <img class="img-fluid" src="images/Contributors/contributor 3.jpg" alt="close up picture of cat">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 4.jpg" alt="">
+        <img class="img-fluid" src="images/Contributors/contributor 4.jpg" alt="picture of sleeping cat">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 5.jpg" alt="">
+        <img class="img-fluid" src="images/Contributors/contributor 5.jpg" alt="picture of yawning cat">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 6.jpg" alt="">
+        <img class="img-fluid" src="images/Contributors/contributor 6.jpg" alt="picture of excited cat">
       </div>
     </div>
     <!-- /.row -->
