fixes yet again

--- a/Tutorials.html
+++ b/Tutorials.html
@@ -70,7 +70,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="images/tutorials/tutorial 1.jpg" alt="cclose up picture of scarf with leaves">
+          <img class="card-img-top" src="images/tutorials/tutorial 1.jpg" alt="close up picture of scarf with leaves">
           <div class="card-body">
             <h2 class="card-title">Knit scarf with leaves</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
