--- a/Tutorials.html
+++ b/Tutorials.html
@@ -70,7 +70,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <a href="#" <img class="card-img-top" src="images/tutorials/Tutorial 1.jpg" alt="close up picture of scarf with leaves"></a>
+          <a href="#" ><img class="card-img-top" src="images/tutorials/Tutorial 1.jpg" alt="close up picture of scarf with leaves"></a>
           <div class="card-body">
             <h2 class="card-title">Knit scarf with leaves</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
@@ -86,7 +86,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <a href="#" <img class="card-img-top" src="images/tutorials/Tutorial 2.jpg" alt="picture of balls of yarn"></a>
+          <a href="#"><img class="card-img-top" src="images/tutorials/Tutorial 2.jpg" alt="picture of balls of yarn"></a>
           <div class="card-body">
             <h2 class="card-title">Fun with yarn</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
@@ -102,7 +102,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <a href="#" <img class="card-img-top" src="images/tutorials/Tutorial 3.jpg" alt="Closeup view of baby sweater"></a>
+          <a href="#"><img class="card-img-top" src="images/tutorials/Tutorial 3.jpg" alt="Closeup view of baby sweater"></a>
           <div class="card-body">
             <h2 class="card-title">Baby sweater</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
