--- a/Tutorials.html
+++ b/Tutorials.html
@@ -31,13 +31,11 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="Tutorials.html">Tutorials</a>
+            <a class="nav-link" href="tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
-          </li>
-
-          </li>
+          </li>   
         </ul>
       </div>
     </div>
@@ -48,7 +46,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Easy Tutorials
-      <small>from our staff</small>
+      <small>from our instructors</small>
     </h1>
 
     <ol class="breadcrumb">
