--- a/Tutorials.html
+++ b/Tutorials.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="Tutorials.html">Tutorials</a>
+            <a class="nav-link" href="tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
@@ -63,7 +63,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <a href="#"><img class="card-img-top" src="images/Tutorials/Tutorial 1.jpg"
+          <a href="#"><img class="card-img-top" src="images/tutorials/Tutorial 1.jpg"
               alt="close up picture of scarf with leaves"></a>
           <div class="card-body">
             <h2 class="card-title">Knit scarf with leaves</h2>
@@ -80,7 +80,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <a href="#"><img class="card-img-top" src="images/Tutorials/Tutorial 2.jpg"
+          <a href="#"><img class="card-img-top" src="images/tutorials/Tutorial 2.jpg"
               alt="picture of balls of yarn"></a>
           <div class="card-body">
             <h2 class="card-title">Fun with yarn</h2>
@@ -97,7 +97,7 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <a href="#"><img class="card-img-top" src="images/Tutorials/Tutorial 3.jpg"
+          <a href="#"><img class="card-img-top" src="images/tutorials/Tutorial 3.jpg"
               alt="Closeup view of baby sweater"></a>
           <div class="card-body">
             <h2 class="card-title">Baby sweater</h2>
