--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Tutorials.html">Tutorials</a>
+            <a class="nav-link" href="tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="contact.html">Contact Us</a>
