--- a/about.html
+++ b/about.html
@@ -59,6 +59,7 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
+        
         <img class="img-fluid rounded mb-4" src="images/team members/person 5.jpg" alt="picture of man">
       </div>
       <div class="col-lg-6">
@@ -123,7 +124,7 @@
     </div>
     <!-- /.row -->
 
-    <!-- Our Customers -->
+    <!-- Our Contributors -->
     <h2>Other Contributors</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
