--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
   <meta name="description" content="Let's Learn to Knit!">
   <meta name="author" content="Colleen Fettig">
@@ -99,118 +99,125 @@
       <div class="portfolio-item col-sm-6 col-md-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 1.jpg" alt="picture of knit toy mobile">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Mobile</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum
-              quasi sapiente nesciunt?
-              Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil,
-              dolorem!</p>
-          </div>
+            <div class="tilt pic">
+              <img class="card-img-top" src="images/projects/knit project 1.jpg" alt="picture of knit toy mobile">
+          </a></div>
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Mobile</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum
+            quasi sapiente nesciunt?
+            Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil,
+            dolorem!</p>
         </div>
       </div>
-      <div class="portfolio-item col-sm-6 col-md-4">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 2.jpg" alt="picture of baby booties">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Booties</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-              gravida pellentesque urna varius vitae. Voluptatibus sit, repellat sequi itaque deserunt. </p>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-item col-sm-6 col-md-4">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 3.jpg" alt="picture of ball of yarn">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Yarn Ball</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed
-              cumque, odio distinctio
-              velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel
-              quam!</p>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-item col-sm-6 col-md-4">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 4.jpg" alt="picture of stitches close up">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Sweater</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-              gravida pellentesque urna varius vitae.Ut enim ad minim veniam, quis nostn xcepteur sint occaecat
-              cupidatat no
-              varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-item col-sm-6 col-md-4">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 5.jpg" alt="picture of balls of yarn">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Yarn Types</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-              gravida pellentesque urna rud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-              aute irure dolor in reprehenderit in voluptate velit.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-item col-sm-6 col-md-4">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="images/projects/knit project 6.jpg" alt="picture of knit dolls">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Dolls</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit
-              ducimus nihil provident,
-              perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
-
-
     </div>
-    <!-- /.container -->
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <div class="portfolio-item col-sm-6 col-md-4">
+      <div class="card h-100">
+        <a href="#">
+            <div class="tilt pic">
+          <img class="card-img-top" src="images/projects/knit project 2.jpg" alt="picture of baby booties">
 
-      <div class="container">
-
-        <div class="footer-flex">
-          <p class="footer-flex text-white">Copyright &copy; Let's Learn to Knit! 2019</p>
-          <p class="footer-flex text-white">Colleen Fettig</p>
+            </div>
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Booties</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+            gravida pellentesque urna varius vitae. Voluptatibus sit, repellat sequi itaque deserunt. </p>
         </div>
       </div>
+    </div>
+    <div class="portfolio-item col-sm-6 col-md-4">
+      <div class="card h-100">
+        <a href="#">
+          <div class="tilt pic">
+          <img class="card-img-top" src="images/projects/knit project 3.jpg" alt="picture of ball of yarn">
+        </div>
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Yarn Ball</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed
+            cumque, odio distinctio
+            velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel
+            quam!</p>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio-item col-sm-6 col-md-4">
+      <div class="card h-100">
+        <a href="#">
+          <img class="card-img-top" src="images/projects/knit project 4.jpg" alt="picture of stitches close up">
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Sweater</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+            gravida pellentesque urna varius vitae.Ut enim ad minim veniam, quis nostn xcepteur sint occaecat
+            cupidatat no
+            varius vitae.</p>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio-item col-sm-6 col-md-4">
+      <div class="card h-100">
+        <a href="#">
+          <img class="card-img-top" src="images/projects/knit project 5.jpg" alt="picture of balls of yarn">
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Yarn Types</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+            gravida pellentesque urna rud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio-item col-sm-6 col-md-4">
+      <div class="card h-100">
+        <a href="#">
+          <img class="card-img-top" src="images/projects/knit project 6.jpg" alt="picture of knit dolls">
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">Dolls</a>
+          </h4>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit
+            ducimus nihil provident,
+            perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
 
-    </footer>
+
+  </div>
+  <!-- /.container -->
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+
+    <div class="container">
+
+      <div class="footer-flex">
+        <p class="footer-flex text-white">Copyright &copy; Let's Learn to Knit! 2019</p>
+        <p class="footer-flex text-white">Colleen Fettig</p>
+      </div>
+    </div>
+
+  </footer>
 
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
