--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <div class="portfolio-item col-sm-6 col-md-4">
       <div class="card h-100">
         <a href="#">
-            <div class="tilt pic">
-          <img class="card-img-top" src="images/projects/knit project 2.jpg" alt="picture of baby booties">
+          <div class="tilt pic">
+            <img class="card-img-top" src="images/projects/knit project 2.jpg" alt="picture of baby booties">
 
-            </div>
+          </div>
         </a>
         <div class="card-body">
           <h4 class="card-title">
@@ -135,8 +135,8 @@
       <div class="card h-100">
         <a href="#">
           <div class="tilt pic">
-          <img class="card-img-top" src="images/projects/knit project 3.jpg" alt="picture of ball of yarn">
-        </div>
+            <img class="card-img-top" src="images/projects/knit project 3.jpg" alt="picture of ball of yarn">
+          </div>
         </a>
         <div class="card-body">
           <h4 class="card-title">
@@ -152,7 +152,9 @@
     <div class="portfolio-item col-sm-6 col-md-4">
       <div class="card h-100">
         <a href="#">
-          <img class="card-img-top" src="images/projects/knit project 4.jpg" alt="picture of stitches close up">
+          <div class="tilt pic">
+            <img class="card-img-top" src="images/projects/knit project 4.jpg" alt="picture of stitches close up">
+          </div>
         </a>
         <div class="card-body">
           <h4 class="card-title">
@@ -168,7 +170,9 @@
     <div class="portfolio-item col-sm-6 col-md-4">
       <div class="card h-100">
         <a href="#">
-          <img class="card-img-top" src="images/projects/knit project 5.jpg" alt="picture of balls of yarn">
+          <div class="tilt pic">
+            <img class="card-img-top" src="images/projects/knit project 5.jpg" alt="picture of balls of yarn">
+          </div>
         </a>
         <div class="card-body">
           <h4 class="card-title">
@@ -184,7 +188,10 @@
     <div class="portfolio-item col-sm-6 col-md-4">
       <div class="card h-100">
         <a href="#">
-          <img class="card-img-top" src="images/projects/knit project 6.jpg" alt="picture of knit dolls">
+          <div class="tilt pic">
+          <img class="card-img-top" src="images/projects/knit project 6.jpg"
+            alt="picture of knit dolls">
+          </div>
         </a>
         <div class="card-body">
           <h4 class="card-title">
