--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        
+
         <img class="img-fluid rounded mb-4" src="images/team members/person 5.jpg" alt="picture of man">
       </div>
       <div class="col-lg-6">
@@ -78,75 +78,87 @@
 
     <h2>Our Instructors<h2>
 
-    <div class="row">
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/team members/person 1.jpg" alt="picure of woman">
-          <div class="card-body">
-            <h4 class="card-title">Carrie</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Head Instructor</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
-              ipsum fugiat odio officiis odit.</p>
+        <div class="row">
+          <div class="col-lg-4 mb-4">
+            <div class="card h-100 text-center">
+              <img class="card-img-top" src="images/team members/person 1.jpg" alt="picure of woman">
+              <div class="card-body">
+                <h4 class="card-title">Carrie</h4>
+                <h6 class="card-subtitle mb-2 text-muted">Head Instructor</h6>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
+                  ipsum fugiat odio officiis odit.</p>
+              </div>
+              <div class="card-footer">
+                <a href="#">name@example.com</a>
+              </div>
+            </div>
           </div>
-          <div class="card-footer">
-            <a href="#">name@example.com</a>
+          <div class="col-lg-4 mb-4">
+            <div class="card h-100 text-center">
+              <img class="card-img-top" src="images/team members/person 2.jpg" alt="picture of woman">
+              <div class="card-body">
+                <h4 class="card-title">Mary</h4>
+                <h6 class="card-subtitle mb-2 text-muted">Instructor</h6>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
+                  ipsum fugiat odio officiis odit.</p>
+              </div>
+              <div class="card-footer">
+                <a href="#">name@example.com</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card h-100 text-center">
+              <img class="card-img-top" src="images/team members/person 3.jpg" alt="picture of woman">
+              <div class="card-body">
+                <h4 class="card-title">Sherry</h4>
+                <h6 class="card-subtitle mb-2 text-muted">Beginning Instructor</h6>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
+                  ipsum fugiat odio officiis odit.</p>
+              </div>
+              <div class="card-footer">
+                <a href="#">name@example.com</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/team members/person 2.jpg" alt="picture of woman">
-          <div class="card-body">
-            <h4 class="card-title">Mary</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Instructor</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
-              ipsum fugiat odio officiis odit.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#">name@example.com</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/team members/person 3.jpg" alt="picture of woman">
-          <div class="card-body">
-            <h4 class="card-title">Sherry</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Beginning Instructor</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum
-              ipsum fugiat odio officiis odit.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#">name@example.com</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /.row -->
+        <!-- /.row -->
 
-    <!-- Our Contributors -->
-    <h2>Other Contributors</h2>
-    <div class="row">
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/Contributor 1.jpg" alt="picture of cat in a basket">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 2.jpg" alt="picture of kitten">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 3.jpg" alt="close up picture of cat">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 4.jpg" alt="picture of sleeping cat">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 5.jpg" alt="picture of yawning cat">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="images/Contributors/contributor 6.jpg" alt="picture of excited cat">
-      </div>
-    </div>
-    <!-- /.row -->
+        <!-- Our Contributors -->
+        <h2>Other Contributors</h2>
+        <div class="row">
+          <div class="col-lg-2 col-sm-4 mb-4">
+            <div class="blur pic">
+              <img class="img-fluid" src="images/Contributors/Contributor 1.jpg" alt="picture of cat in a basket">
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-4 mb-4">
+            <div class="blur pic">
+              <img class="img-fluid" src="images/Contributors/contributor 2.jpg" alt="picture of kitten">
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-4 mb-4">
+            <div class="blur pic">
+              <img class="img-fluid" src="images/Contributors/contributor 3.jpg" alt="close up picture of cat">
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-4 mb-4">
+            <div class="blur pic">
+              <img class="img-fluid" src="images/Contributors/contributor 4.jpg" alt="picture of sleeping cat">
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-4 mb-4">
+            <div class="blur pic">
+              <img class="img-fluid" src="images/Contributors/contributor 5.jpg" alt="picture of yawning cat">
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-4 mb-4">
+            <div class="blur pic">
+              <img class="img-fluid" src="images/Contributors/contributor 6.jpg" alt="picture of excited cat">
+            </div>
+          </div>
+        </div>
+        <!-- /.row -->
 
   </div>
   <!-- /.container -->
