--- a/Tutorials.html
+++ b/Tutorials.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="tutorials.html">Tutorials</a>
+            <a class="nav-link" href="Tutorials.html">Tutorials</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
